--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>title</title>
     <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">
+    <%= @user.username %>
   </head>
   <body id="page-top">
     <a href="/logout">logout</a>
