--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -5,6 +5,7 @@
     <title>title</title>
     <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">
     <%= @user.username %>
+    <%= @user.balance %>
   </head>
   <body id="page-top">
     <a href="/logout">logout</a>
