--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -7,8 +7,8 @@
   </head>
   <body id="page-top">
     <a href="/logout">logout</a>
-    <%= @user.username %>
-    <%= @user.balance %>
+    <h1>Welcome <%= Helpers.current_user(session).username %></h1>
+   <h3>Your Balance: <%= Helpers.current_user(session).balance %></h3>
 
   </body>
 </html>
