--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -7,7 +7,7 @@
   </head>
   <body id="page-top">
     <a href="/logout">logout</a>
-    <% if is_logged_in? %>
+    <% if is_logged_in?(session) %>
     <%= @user.username %>
     <%= @user.balance %>
     <% end %>
